traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Compilation error:
TraversalZigZag:17: error: Missing closing brace `}' assumed here
} 
^